--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -5,9 +5,10 @@
         <title>Tienda en linea</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet"> href="css/estilos.css"/>
     </head>
     <body>
-        <div style="text-align: center;">
+        <div id"contenedorTitulo">
             <h1>Home</h1>
             <p>Bienvenidos a la pagina de Tienda en linea</p>
         </div>
